[debug]fix deployment problem on netlify with variables use on scrollbar style

--- a/src/assets/styles/global/global.scss
+++ b/src/assets/styles/global/global.scss
@@ -14,23 +14,3 @@ a{
 {
     display: none;
 }
-/*
-::-webkit-scrollbar {
-    width: 10px;
-   
-  }
-  */
-  /* Track */
-  /*
-  ::-webkit-scrollbar-track {
-    background: $lightpurple;
-    
-  }
-  */
-  /* Handle */
-  /*
-  ::-webkit-scrollbar-thumb {
-    background: $darkpurple;
-    border-radius: 10px;
-  }
-  */
